@@ -1,142 +1,34 @@
-package com.kotak.orchestrator.orchestrator.service;
+WARNING: A Java agent has been loaded dynamically (/Users/SnehalGamare/.m2/repository/net/bytebuddy/byte-buddy-agent/1.14.13/byte-buddy-agent-1.14.13.jar)
+WARNING: If a serviceability tool is in use, please run with -XX:+EnableDynamicAgentLoading to hide this warning
+WARNING: If a serviceability tool is not in use, please run with -Djdk.instrument.traceUsage for more information
+WARNING: Dynamic loading of agents will be disallowed by default in a future release
+Java HotSpot(TM) 64-Bit Server VM warning: Sharing is only supported for boot loader classes because bootstrap classpath has been appended
 
-import com.kotak.orchestrator.orchestrator.entity.PlutusClientConfiguration;
-import com.kotak.orchestrator.orchestrator.repository.PlutusClientConfigurationRepository;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.mockito.*;
-import java.util.List;
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
+org.springframework.orm.jpa.JpaSystemException: Identifier of entity 'com.kotak.orchestrator.orchestrator.entity.PlutusClientConfiguration' must be manually assigned before calling 'persist()'
 
-class ClientConfigCacheServiceTest {
-
-    @Mock
-    private PlutusClientConfigurationRepository repository;
-
-    @InjectMocks
-    private ClientConfigCacheService cacheService;
-
-    @BeforeEach
-    void setup() {
-        MockitoAnnotations.openMocks(this);
-    }
-
-    @Test
-    void testRefreshCacheLoadsActiveMasterAccounts() {
-        PlutusClientConfiguration config1 = new PlutusClientConfiguration();
-        config1.setMasterAccount("ACC123");
-        PlutusClientConfiguration config2 = new PlutusClientConfiguration();
-        config2.setMasterAccount("ACC456");
-
-        when(repository.findAllActive()).thenReturn(List.of(config1, config2));
-
-        cacheService.refreshCache();
-
-        assertTrue(cacheService.isMasterAccount("ACC123"));
-        assertTrue(cacheService.isMasterAccount("ACC456"));
-        assertFalse(cacheService.isMasterAccount("UNKNOWN"));
-    }
-
-    @Test
-    void testIsMasterAccountLogsCorrectly() {
-        // No data loaded, so should return false
-        boolean result = cacheService.isMasterAccount("ACC999");
-        assertFalse(result);
-    }
-
-    @Test
-    void testRefreshCacheHandlesNullMasterAccount() {
-        PlutusClientConfiguration configWithNull = new PlutusClientConfiguration();
-        configWithNull.setMasterAccount(null);
-
-        when(repository.findAllActive()).thenReturn(List.of(configWithNull));
-
-        // Should not throw exception or add null
-        cacheService.refreshCache();
-
-        assertFalse(cacheService.isMasterAccount(null));
-    }
-}
-
-
-
-package com.kotak.orchestrator.orchestrator.service;
-
-import com.kotak.orchestrator.orchestrator.repository.PlutusFinacleDataRepository;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.mockito.*;
-
-import java.time.LocalDateTime;
-
-import static org.mockito.Mockito.*;
-
-class PlutusDataCleanupServiceTest {
-
-    @Mock
-    private PlutusFinacleDataRepository repository;
-
-    @InjectMocks
-    private PlutusDataCleanupService cleanupService;
-
-    @BeforeEach
-    void setup() {
-        MockitoAnnotations.openMocks(this);
-    }
-
-    @Test
-    void testCleanupOldDataCallsRepository() {
-        cleanupService.cleanupOldData();
-        verify(repository, times(1)).deleteByReceivedAtBefore(any(LocalDateTime.class));
-    }
-
-    @Test
-    void testCleanupOldDataExceptionHandled() {
-        doThrow(new RuntimeException("DB error")).when(repository).deleteByReceivedAtBefore(any(LocalDateTime.class));
-
-        // Should not throw, just logs error
-        cleanupService.cleanupOldData();
-
-        verify(repository, times(1)).deleteByReceivedAtBefore(any(LocalDateTime.class));
-    }
-}
-
-
-package com.kotak.orchestrator.orchestrator.repository;
-
-import com.kotak.orchestrator.orchestrator.entity.PlutusClientConfiguration;
-import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
-
-import java.util.List;
-
-import static org.assertj.core.api.Assertions.assertThat;
-
-@DataJpaTest
-class PlutusClientConfigurationRepositoryTest {
-
-    @Autowired
-    private PlutusClientConfigurationRepository repository;
-
-    @Test
-    void findAllActiveReturnsOnlyActiveConfigs() {
-        // Prepare test data (assuming entity has setters)
-        PlutusClientConfiguration activeConfig = new PlutusClientConfiguration();
-        activeConfig.setActiveFlag(true);
-        activeConfig.setMasterAccount("ACTIVE_ACC");
-
-        PlutusClientConfiguration inactiveConfig = new PlutusClientConfiguration();
-        inactiveConfig.setActiveFlag(false);
-        inactiveConfig.setMasterAccount("INACTIVE_ACC");
-
-        repository.save(activeConfig);
-        repository.save(inactiveConfig);
-
-        List<PlutusClientConfiguration> activeConfigs = repository.findAllActive();
-
-        assertThat(activeConfigs).hasSize(1);
-        assertThat(activeConfigs.get(0).getMasterAccount()).isEqualTo("ACTIVE_ACC");
-    }
-}
+	at org.springframework.orm.jpa.vendor.HibernateJpaDialect.convertHibernateAccessException(HibernateJpaDialect.java:341)
+	at org.springframework.orm.jpa.vendor.HibernateJpaDialect.translateExceptionIfPossible(HibernateJpaDialect.java:241)
+	at org.springframework.orm.jpa.AbstractEntityManagerFactoryBean.translateExceptionIfPossible(AbstractEntityManagerFactoryBean.java:550)
+	at org.springframework.dao.support.ChainedPersistenceExceptionTranslator.translateExceptionIfPossible(ChainedPersistenceExceptionTranslator.java:61)
+	at org.springframework.dao.support.DataAccessUtils.translateIfNecessary(DataAccessUtils.java:335)
+	at org.springframework.dao.support.PersistenceExceptionTranslationInterceptor.invoke(PersistenceExceptionTranslationInterceptor.java:152)
+	at org.springframework.aop.framework.ReflectiveMethodInvocation.proceed(ReflectiveMethodInvocation.java:184)
+	at org.springframework.data.jpa.repository.support.CrudMethodMetadataPostProcessor$CrudMethodMetadataPopulatingMethodInterceptor.invoke(CrudMethodMetadataPostProcessor.java:164)
+	at org.springframework.aop.framework.ReflectiveMethodInvocation.proceed(ReflectiveMethodInvocation.java:184)
+	at org.springframework.aop.interceptor.ExposeInvocationInterceptor.invoke(ExposeInvocationInterceptor.java:97)
+	at org.springframework.aop.framework.ReflectiveMethodInvocation.proceed(ReflectiveMethodInvocation.java:184)
+	at org.springframework.aop.framework.JdkDynamicAopProxy.invoke(JdkDynamicAopProxy.java:223)
+	at jdk.proxy2/jdk.proxy2.$Proxy113.save(Unknown Source)
+	at com.kotak.orchestrator.orchestrator.repository.PlutusClientConfigurationRepositoryTest.findAllActiveReturnsOnlyActiveConfigs(PlutusClientConfigurationRepositoryTest.java:29)
+	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
+Caused by: org.hibernate.id.IdentifierGenerationException: Identifier of entity 'com.kotak.orchestrator.orchestrator.entity.PlutusClientConfiguration' must be manually assigned before calling 'persist()'
+	at org.hibernate.event.internal.AbstractSaveEventListener.performSave(AbstractSaveEventListener.java:204)
+	at org.hibernate.event.internal.AbstractSaveEventListener.saveWithGeneratedId(AbstractSaveEventListener.java:134)
+	at org.hibernate.event.internal.DefaultPersistEventListener.entityIsTransient(DefaultPersistEventListener.java:175)
+	at org.hibernate.event.internal.DefaultPersistEventListener.persist(DefaultPersistEventListener.java:93)
+	at org.hibernate.event.internal.DefaultPersistEventListener.onPersist(DefaultPersistEventListener.java:77)
+	at org.hibernate.event.internal.DefaultPersistEventListener.onPersist(DefaultPersistEventListener.java:54)
+	at org.hibernate.event.service.internal.EventListenerGroupImpl.fireEventOnEachListener(EventListenerGroupImpl.java:127)
+	at org.hibernate.internal.SessionImpl.firePersist(SessionImpl.java:754)
